# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    "annotationdataaccessor_fuzzer:fuzztest",
    "begintracepoint_fuzzer:fuzztest",
    "classdataaccessor_fuzzer:fuzztest",
    "codedataaccessor_fuzzer:fuzztest",
    "debuginfodataaccessor_fuzzer:fuzztest",
    "fielddataaccessor_fuzzer:fuzztest",
    "int64tracepoint_fuzzer:fuzztest",
    "inttracepoint_fuzzer:fuzztest",
    "load_fuzzer:fuzztest",
    "resolvesymbol_fuzzer:fuzztest",
  ]
}
